--- a/lamp/ubuntu.yaml
+++ b/lamp/ubuntu.yaml
@@ -1,13 +1,13 @@
 ---
 - name: installing lamp on ubuntu
   become: yes
-  hosts: UbuntuServer
+  hosts: webservers
   vars:
-    package1: apache2
-    package2:
-      - php 
-      - libapache2-mod-php 
-      - php-mysql
+    # package1: apache2
+    # package2:
+    #   - php 
+    #   - libapache2-mod-php 
+    #   - php-mysql
     location: /var/www/html/
   tasks:
     - name: installing apache pkg
