all set for execution

--- a/lamp/defaults.yaml
+++ b/lamp/defaults.yaml
@@ -1,6 +1,13 @@
-packages:
-  - apache2
+package: apache2
+package1:
   - php
-  - php-mysql
   - libapache2-mod-php
-
+  - php-mysql
+package2:
+  - php
+  - php-cli
+  - php-common
+  - php-gd
+  - php-mysqlnd
+  - php-pdo
+file_location: /var/www/html/
