--- a/lamp/g-inventory.yaml
+++ b/lamp/g-inventory.yaml
@@ -2,11 +2,6 @@ servers:
   hosts:
     172.31.24.203:
     172.31.23.67:
-      package:
-        - httpd
-        - php
-        - php-cli
-        - php-common
-        - php-gd
-        - php-mysqlnd
-        - php-pdo
+      vars:
+        package: httpd
+ 
